force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Classification__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Classification__c</fullName>
    <description>Users populate this optional picklist field to configure a Classification for a Product.</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overdraft Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>