force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>The Administrator populates this optional text field to describe the selected product(s). By default, it is blank.</description>
    <inlineHelpText>Enter a detailed description for the product.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>