force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Disable_Id_Document_Save__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Disable_Id_Document_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox to prevent an ID Document from saving to its placeholder in Document Manager after an ID validates through ID Scan.</description>
    <inlineHelpText>Select this checkbox to prevent an ID Document from saving into Document Manager.</inlineHelpText>
    <label>Disable ID Document Save</label>
    <type>Checkbox</type>
</CustomField>