force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Institution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually populate this lookup field to define the Institution to which a product belongs.</description>
    <label>Institution</label>
    <referenceTo>LLC_BI__Institution__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>