force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Maximum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Funding_Amount__c</fullName>
    <description>Manually populate this currency field with the maximum amount allowed to fund this product.</description>
    <label>Maximum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>