force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Order__c</fullName>
    <description>Administrators populate this optional text field to set the ordering priority of a product. By default, it is blank.</description>
    <inlineHelpText>Enter a number to assign ordering priority on the product list. Products display in ascending order of priority.</inlineHelpText>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>