force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Feature__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional and is manually populated. This field is a lookup used to associate a product feature to the product. A product feature is used to attach attributes to the product.</description>
    <inlineHelpText>After changing this field, go to the nCino Administration tab then run Install Updates and Install Batch Updates if this product is related to existing loans.</inlineHelpText>
    <label>Product Feature</label>
    <referenceTo>LLC_BI__Product_Feature__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>