force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <description>This field is required and is manually populated. This field is a master detail field that is used to associate the product with a product type.</description>
    <label>Product Type</label>
    <referenceTo>LLC_BI__Product_Type__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>