force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__RealEstate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RealEstate_Type__c</fullName>
    <description>This field is no longer in use. Previously, it was used to specify what type of real estate is involved with this product.</description>
    <inlineHelpText>If this product has real estate involved, what type of real estate. Note: If anything besides &quot;None&quot; is checked, then a hidden &quot;Real Estate&quot; checkbox field will be set to true.</inlineHelpText>
    <label>Real Estate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Family Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>