force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Screen_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the Screen Section that relates to this Product.</description>
    <label>Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>